--- a/Pos/res/layout/activity_main.xml
+++ b/Pos/res/layout/activity_main.xml
@@ -8,9 +8,28 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".main_activity" >
 
-    <TextView
+    <ListView
+        android:id="@+id/listView1"
+        android:layout_width="match_parent"
+        android:layout_height="325dp">
+    </ListView>
+
+    <Button
+        android:id="@+id/add_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_alignLeft="@+id/listView1"
+        android:layout_below="@+id/listView1"
+        android:layout_marginTop="14dp"
+        android:text="ADD" />
+
+    <Button
+        android:id="@+id/remove_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/add_button"
+        android:layout_marginLeft="50dp"
+        android:layout_toRightOf="@+id/add_button"
+        android:text="REMOVE" />
 
 </RelativeLayout>
