--- a/Pos/res/layout/activity_main.xml
+++ b/Pos/res/layout/activity_main.xml
@@ -27,9 +27,10 @@
         android:id="@+id/remove_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/add_button"
         android:layout_alignBottom="@+id/add_button"
-        android:layout_marginLeft="50dp"
-        android:layout_toRightOf="@+id/add_button"
+        android:layout_alignRight="@+id/listView1"
+        android:layout_marginRight="44dp"
         android:text="REMOVE" />
 
 </RelativeLayout>
