--- a/Pos/res/layout/activity_main.xml
+++ b/Pos/res/layout/activity_main.xml
@@ -15,22 +15,29 @@
     </ListView>
 
     <Button
-        android:id="@+id/add_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/listView1"
-        android:layout_below="@+id/listView1"
-        android:layout_marginTop="14dp"
-        android:text="ADD" />
-
-    <Button
         android:id="@+id/remove_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/add_button"
         android:layout_alignBottom="@+id/add_button"
-        android:layout_alignRight="@+id/listView1"
-        android:layout_marginRight="44dp"
+        android:layout_centerHorizontal="true"
         android:text="REMOVE" />
+
+    <Button
+        android:id="@+id/add_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/listView1"
+        android:layout_below="@+id/listView1"
+        android:text="ADD" />
+
+    <Button
+        android:id="@+id/sale_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/add_button"
+        android:layout_alignRight="@+id/remove_button"
+        android:layout_below="@+id/add_button"
+        android:text="Sale" />
 
 </RelativeLayout>
