--- a/Pos/res/layout/makesale_layout.xml
+++ b/Pos/res/layout/makesale_layout.xml
@@ -12,7 +12,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <ListView
-        android:id="@+id/listView1"
+        android:id="@+id/listItem"
         android:layout_width="match_parent"
         android:layout_height="195dp" >
     </ListView>
