--- a/Pos/res/layout/add_layout.xml
+++ b/Pos/res/layout/add_layout.xml
@@ -46,6 +46,19 @@
         android:layout_height="wrap_content"
         android:ems="10" />
 
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Price"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <EditText
+        android:id="@+id/price_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
