add some funciton on Sale tab and Inventory tab.
-add function ok button on Sale tab and Inventory tab.
-add function cancel button on Sale tab and Inventory tab.
-cancel button have problem, it can go back but there isn't tab on top.
I'm lazy to fix today, i'm sleepy.

--- a/Pos/res/layout/inventory_tab.xml
+++ b/Pos/res/layout/inventory_tab.xml
@@ -24,19 +24,19 @@
                 android:id="@+id/button1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Button" />
+                android:text="Add" />
 
             <Button
                 android:id="@+id/button2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Button" />
+                android:text="Edit" />
 
             <Button
                 android:id="@+id/button3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Button" />
+                android:text="Remove" />
 
         </LinearLayout>
 
