--- a/Pos/res/layout/sale_tab.xml
+++ b/Pos/res/layout/sale_tab.xml
@@ -23,7 +23,7 @@
             <ListView
                 android:id="@+id/listView2"
                 android:layout_width="157dp"
-                android:layout_height="wrap_content" >
+                android:layout_height="247dp" >
 
             </ListView>
 
@@ -54,13 +54,13 @@
                         android:id="@+id/button1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Button" />
+                        android:text="OK" />
 
                     <Button
                         android:id="@+id/button2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Button" />
+                        android:text="Cancel" />
 
                 </LinearLayout>
 
