--- a/Pos/res/layout/inventory_tab.xml
+++ b/Pos/res/layout/inventory_tab.xml
@@ -33,7 +33,7 @@
                 android:text="Edit" />
 
             <Button
-                android:id="@+id/button3"
+                android:id="@+id/set_quantity_ok_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Remove" />
