--- a/Pos/res/layout/product_tab.xml
+++ b/Pos/res/layout/product_tab.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/set_quantity_textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView" />
