--- a/Pos/res/layout/sale_tab.xml
+++ b/Pos/res/layout/sale_tab.xml
@@ -33,13 +33,13 @@
                 android:orientation="vertical" >
 
                 <TextView
-                    android:id="@+id/textView1"
+                    android:id="@+id/set_quantity_textView1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="TextView" />
 
                 <EditText
-                    android:id="@+id/editText1"
+                    android:id="@+id/set_quantity_editText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" >
 
