--- a/Pos/res/layout/inventory_tab.xml
+++ b/Pos/res/layout/inventory_tab.xml
@@ -24,13 +24,17 @@
                 android:id="@+id/button_add"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Add" />
+                android:text="Add" 
+                android:textColor="#FFFFFF"
+                android:background="@drawable/greenbutton"/>
 
             <Button
                 android:id="@+id/set_quantity_ok_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Remove" />
+                android:text="Remove"
+                android:textColor="#FFFFFF"
+                android:background="@drawable/light_grey_button" />
 
         </LinearLayout>
 
