--- a/Pos/res/layout/remove_layout.xml
+++ b/Pos/res/layout/remove_layout.xml
@@ -28,13 +28,17 @@
             android:id="@+id/OK_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="OK" />
+            android:text="OK" 
+            android:textColor="#FFFFFF"
+            android:background="@drawable/greenbutton"/>
 
         <Button
             android:id="@+id/cancel_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Cancel" />
+            android:text="Cancel"
+            android:textColor="#FFFFFF"
+            android:background="@drawable/light_grey_button" />
 
     </LinearLayout>
 
