set total price in Sale Tab

--- a/Pos/res/layout/sale_tab.xml
+++ b/Pos/res/layout/sale_tab.xml
@@ -33,10 +33,11 @@
                 android:orientation="vertical" >
 
                 <TextView
-                    android:id="@+id/set_quantity_textView1"
+                    android:id="@+id/textView1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    android:text="Large Text"
+                    android:textAppearance="?android:attr/textAppearanceLarge" />
 
                 <EditText
                     android:id="@+id/set_quantity_editText"
