--- a/Pos/res/layout/inventory_tab.xml
+++ b/Pos/res/layout/inventory_tab.xml
@@ -6,8 +6,8 @@
     android:layout_height="match_parent" >
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:orientation="vertical" >
 
         <ListView
