--- a/Pos/res/layout/item_layout.xml
+++ b/Pos/res/layout/item_layout.xml
@@ -14,9 +14,9 @@
             android:layout_height="wrap_content"
             android:text="Large Text"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="#FAFAFA"
-            android:textColorHint="#FAFAFA"
-            android:textColorLink="#FAFAFA" />
+            android:textColor="#000000"
+            android:textColorHint="#000000"
+            android:textColorLink="#000000" />
 
         <TextView
             android:id="@+id/text_price"
@@ -25,7 +25,7 @@
             android:layout_marginRight="@dimen/activity_vertical_margin"
             android:text="Large Text"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="#FAFAFA" />
+            android:textColor="#000000" />
 
         <TextView
             android:id="@+id/textView4"
@@ -33,7 +33,7 @@
             android:layout_height="wrap_content"
             android:text="฿"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="#FAFAFA" />
+            android:textColor="#000000" />
 
     </LinearLayout>
 
@@ -42,9 +42,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
-        android:textColor="#FAFAFA"
-        android:textColorHint="#FAFAFA"
-        android:textColorLink="#FAFAFA" />
+        android:textColor="#000000"
+        android:textColorHint="#000000"
+        android:textColorLink="#000000" />
 
     
 
