--- a/Pos/res/layout/inventory_tab.xml
+++ b/Pos/res/layout/inventory_tab.xml
@@ -21,6 +21,7 @@
             android:layout_height="wrap_content" >
 
             <Button
+                android:paddingRight="100dp"
                 android:id="@+id/button_add"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -29,6 +30,7 @@
                 android:background="@drawable/greenbutton"/>
 
             <Button
+                android:paddingRight="100dp"
                 android:id="@+id/set_quantity_ok_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
