--- a/Pos/res/layout/sale_tab.xml
+++ b/Pos/res/layout/sale_tab.xml
@@ -9,11 +9,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical" >
-
+		<TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Basket"
+                    android:textAppearance="?android:attr/textAppearanceLarge" />
         <ListView
             android:id="@+id/listView1"
             android:layout_width="fill_parent"
-            android:layout_height="400dp" >
+            android:layout_height="100dp" >
         </ListView>
         
         <LinearLayout 
@@ -24,21 +28,15 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" >
-
-            <ListView
-                android:id="@+id/listView2"
-                android:layout_width="330dp"
-                android:layout_height="match_parent" >
-
-            </ListView>
-
-            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="100dp"
                 android:orientation="vertical" >
 
+           	 	<TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Total"
+                    android:textAppearance="?android:attr/textAppearanceLarge" />
                 <TextView
                     android:id="@+id/textView1"
                     android:layout_width="wrap_content"
@@ -77,6 +75,34 @@
                 </LinearLayout>
 
             </LinearLayout>
+            
+             <LinearLayout 
+            android:layout_width="fill_parent"
+            android:layout_height="5dp"
+            android:background="@drawable/grey_button">
+            
+        </LinearLayout>
+        <LinearLayout >
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Inventory"
+                    android:textAppearance="?android:attr/textAppearanceLarge" />
+    	</LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+			
+            <ListView
+                android:id="@+id/listView2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" >
+
+            </ListView>
+
+            
 
         </LinearLayout>
 
