--- a/Pos/res/layout/sale_tab.xml
+++ b/Pos/res/layout/sale_tab.xml
@@ -4,20 +4,14 @@
     android:id="@+id/tab2"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical" >
-		<TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Basket"
-                    android:textAppearance="?android:attr/textAppearanceLarge" />
         <ListView
             android:id="@+id/listView1"
             android:layout_width="fill_parent"
-            android:layout_height="100dp" >
+            android:layout_height="400dp" >
         </ListView>
         
         <LinearLayout 
@@ -26,36 +20,33 @@
             android:background="@drawable/grey_button">
             
         </LinearLayout>
-
         <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+            <ListView
+                android:id="@+id/listView2"
+                android:layout_width="330dp"
+                android:layout_height="match_parent" >
+            </ListView>
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
+                android:layout_height="match_parent"
                 android:orientation="vertical" >
-
-           	 	<TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Total"
-                    android:textAppearance="?android:attr/textAppearanceLarge" />
                 <TextView
                     android:id="@+id/textView1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="0.0"
                     android:textAppearance="?android:attr/textAppearanceLarge" />
-
                 <EditText
                     android:id="@+id/set_quantity_editText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" >
-
                     <requestFocus />
                 </EditText>
-
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" >
-
                     <Button
                         android:id="@+id/button1"
                         android:layout_width="wrap_content"
@@ -63,7 +54,6 @@
                         android:text="OK"
                         android:textColor="#FFFFFF"
           			    android:background="@drawable/greenbutton" />
-
                     <Button
                         android:id="@+id/button2"
                         android:layout_width="wrap_content"
@@ -71,41 +61,8 @@
                         android:text="Cancel"
                         android:textColor="#FFFFFF"
 						android:background="@drawable/light_grey_button" />
-
                 </LinearLayout>
-
             </LinearLayout>
-            
-             <LinearLayout 
-            android:layout_width="fill_parent"
-            android:layout_height="5dp"
-            android:background="@drawable/grey_button">
-            
         </LinearLayout>
-        <LinearLayout >
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Inventory"
-                    android:textAppearance="?android:attr/textAppearanceLarge" />
-    	</LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" >
-			
-            <ListView
-                android:id="@+id/listView2"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" >
-
-            </ListView>
-
-            
-
-        </LinearLayout>
-
     </LinearLayout>
-
 </LinearLayout>
