--- a/Pos/res/layout/add_layout.xml
+++ b/Pos/res/layout/add_layout.xml
@@ -7,7 +7,7 @@
    
 
     <TextView
-        android:id="@+id/text_quantity"
+        android:id="@+id/large_text_quantity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Name"
