--- a/Pos/res/layout/makesale_layout.xml
+++ b/Pos/res/layout/makesale_layout.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/text_item"
+        android:id="@+id/large_text_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0.00"
