--- a/Pos/res/layout/large_item_layout.xml
+++ b/Pos/res/layout/large_item_layout.xml
@@ -19,13 +19,27 @@
             android:textColorLink="#000000" />
 
         <TextView
-            android:id="@+id/large_text_price"
-            android:layout_width="wrap_content"
+            android:id="@+id/textView1"
+            android:layout_width="70dip"
             android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/activity_vertical_margin"
-            android:text="Large Text"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="#000000" />
+            android:text="" />
+
+        <TextView
+            android:id="@+id/large_text_quantity"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:textColor="#000000"
+            android:textColorHint="#000000"
+            android:textColorLink="#000000" />
+
+        <TextView android:id="@+id/large_text_price" 
+            android:layout_width="90dp" 
+            android:layout_height="wrap_content" 
+            android:layout_marginRight="@dimen/activity_vertical_margin" 
+            android:text="Large Text" 
+            android:textAppearance="?android:attr/textAppearanceLarge" 
+            android:textColor="#000000"/>
 
         <TextView
             android:id="@+id/textView4"
@@ -36,15 +50,6 @@
             android:textColor="#000000" />
 
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/large_text_quantity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        android:textColor="#000000"
-        android:textColorHint="#000000"
-        android:textColorLink="#000000" />
 
     
 
