--- a/Pos/res/layout/product_tab.xml
+++ b/Pos/res/layout/product_tab.xml
@@ -9,6 +9,6 @@
         android:id="@+id/set_quantity_textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:text="Coming Soon" />
 
 </LinearLayout>
