--- a/Pos/res/layout/sale_tab.xml
+++ b/Pos/res/layout/sale_tab.xml
@@ -58,7 +58,7 @@
                         android:id="@+id/button2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Cancel"
+                        android:text="Reset"
                         android:textColor="#FFFFFF"
 						android:background="@drawable/light_grey_button" />
                 </LinearLayout>
