add minor function on inventory

--- a/Pos/res/layout/sale_tab.xml
+++ b/Pos/res/layout/sale_tab.xml
@@ -52,14 +52,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" >
                     <Button
-                        android:id="@+id/button1"
+                        android:id="@+id/inventoryItem_add_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="OK"
                         android:textColor="#FFFFFF"
           			    android:background="@drawable/greenbutton" />
                     <Button
-                        android:id="@+id/button2"
+                        android:id="@+id/inventoryItem_edit_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Reset"
