--- a/Pos/res/layout/product_id_layout.xml
+++ b/Pos/res/layout/product_id_layout.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content" >
 
         <Button
-            android:id="@+id/button1"
+            android:id="@+id/inventoryItem_add_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="OK"
@@ -34,7 +34,7 @@
             android:background="@drawable/greenbutton"/>
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/inventoryItem_edit_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Cancel"
