--- a/Pos/res/layout/inventory_edit_item.xml
+++ b/Pos/res/layout/inventory_edit_item.xml
@@ -15,7 +15,7 @@
             android:text="Product ID" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/product_itemId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="TextView" />
@@ -33,7 +33,7 @@
             android:text="Name" />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/product_item_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="TextView" />
@@ -48,10 +48,10 @@
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Quantity" />
+            android:text="Price" />
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/product_item_quantity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="TextView" />
@@ -66,13 +66,17 @@
             android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Price" />
+            android:text="Quantity" />
 
-        <TextView
-            android:id="@+id/textView8"
+        <EditText
+            android:id="@+id/product_id_editText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:layout_weight="1"
+            android:ems="10" >
+
+            <requestFocus />
+        </EditText>
 
     </LinearLayout>
 
@@ -81,19 +85,13 @@
         android:layout_height="wrap_content" >
 
         <Button
-            android:id="@+id/inventoryItem_add_button"
+            android:id="@+id/inventoryEdit_ok_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Add" />
+            android:text="OK" />
 
         <Button
-            android:id="@+id/inventoryItem_edit_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Edit" />
-
-        <Button
-            android:id="@+id/inventoryItem_cancel_button"
+            android:id="@+id/inventoryEdit_cancel_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Cancel" />
