--- a/Pos/res/layout/inventory_tab.xml
+++ b/Pos/res/layout/inventory_tab.xml
@@ -11,7 +11,7 @@
         android:orientation="vertical" >
 
         <ListView
-            android:id="@+id/listView1"
+            android:id="@+id/inventory_listView"
             android:layout_width="fill_parent"
             android:layout_height="390dp" >
         </ListView>
