--- a/Pos/res/layout/item_layout.xml
+++ b/Pos/res/layout/item_layout.xml
@@ -28,7 +28,7 @@
             android:textColor="#000000" />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/product_item_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="฿"
