--- a/Pos/res/layout/large_item_layout.xml
+++ b/Pos/res/layout/large_item_layout.xml
@@ -42,7 +42,7 @@
             android:textColor="#000000"/>
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/product_item_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="฿"
