--- a/Pos/res/layout/inventory_edit_item.xml
+++ b/Pos/res/layout/inventory_edit_item.xml
@@ -69,7 +69,7 @@
             android:text="Quantity" />
 
         <EditText
-            android:id="@+id/product_id_editText"
+            android:id="@+id/inventoryEdit_quantity_edittext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
