--- a/Pos/res/layout/inventory_edit_item.xml
+++ b/Pos/res/layout/inventory_edit_item.xml
@@ -6,9 +6,10 @@
 
     <TextView
         android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Edit Product Detail"
+        android:layout_width="fill_parent"
+        android:layout_height="60dp"
+        android:gravity="center"
+        android:text="Change Quantity"
         android:textSize="40dp" />
 
     <LinearLayout
@@ -107,7 +108,7 @@
             android:id="@+id/textView2"
             android:layout_width="200dp"
             android:layout_height="35dp"
-            android:text="Old Quantity"
+            android:text="Old quantity"
             android:textSize="25dp" />
 
         <TextView
@@ -134,7 +135,7 @@
             android:id="@+id/textView7"
             android:layout_width="200dp"
             android:layout_height="35dp"
-            android:text="New Quantity"
+            android:text="Add quantity"
             android:textSize="25dp" />
 
         <TextView
@@ -161,12 +162,18 @@
         android:id="@+id/inventoryEdit_ok_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="OK" />
+        android:text="Change quantity" />
 
     <Button
         android:id="@+id/inventoryEdit_cancel_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Cancel" />
+
+    <Button
+        android:id="@+id/inventoryEdit_remove_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Remove this product" />
 
 </LinearLayout>
