--- a/Pos/res/layout/inventory_edit_item.xml
+++ b/Pos/res/layout/inventory_edit_item.xml
@@ -70,27 +70,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="200dp"
-            android:layout_height="35dp"
-            android:text="Price"
-            android:textSize="25dp" />
-
-        <TextView
-            android:id="@+id/TextView01"
-            android:layout_width="wrap_content"
-            android:layout_height="35dp"
-            android:text=":   "
-            android:textSize="25dp" />
-
-        <TextView
-            android:id="@+id/inventoryEdit_price_textview"
-            android:layout_width="200dp"
-            android:layout_height="35dp"
-            android:text="TextView"
-            android:textSize="25dp" />
-
     </LinearLayout>
 
     <LinearLayout
@@ -158,22 +137,28 @@
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/inventoryEdit_ok_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Change quantity" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
 
-    <Button
-        android:id="@+id/inventoryEdit_cancel_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Cancel" />
+        <Button
+            android:id="@+id/inventoryEdit_ok_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="OK" />
 
-    <Button
-        android:id="@+id/inventoryEdit_remove_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Remove this product" />
+        <Button
+            android:id="@+id/inventoryEdit_cancel_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Cancel" />
+
+        <Button
+            android:id="@+id/inventoryEdit_remove_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Remove" />
+
+    </LinearLayout>
 
 </LinearLayout>
