--- a/Pos/res/layout/add_layout.xml
+++ b/Pos/res/layout/add_layout.xml
@@ -20,7 +20,7 @@
         android:ems="10" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/sale_report_priceTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Quantity"
