--- a/Pos/res/layout/inventory_edit_item.xml
+++ b/Pos/res/layout/inventory_edit_item.xml
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content" >
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/sale_report_productTextView"
             android:layout_width="200dp"
             android:layout_height="35dp"
             android:text="Product Code"
@@ -44,7 +44,7 @@
         android:layout_height="wrap_content" >
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/sale_report_priceTextView"
             android:layout_width="200dp"
             android:layout_height="35dp"
             android:text="Name"
@@ -77,14 +77,14 @@
         android:layout_height="wrap_content" >
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/sale_report_timeTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textSize="25dp" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/sale_report_quantityTextView"
             android:layout_width="200dp"
             android:layout_height="35dp"
             android:text="Old quantity"
