--- a/Pos/res/layout/large_item_layout.xml
+++ b/Pos/res/layout/large_item_layout.xml
@@ -19,7 +19,7 @@
             android:textColorLink="#000000" />
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/sale_report_productTextView"
             android:layout_width="70dip"
             android:layout_height="wrap_content"
             android:text="" />
