--- a/Pos/res/layout/product_edit_item.xml
+++ b/Pos/res/layout/product_edit_item.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content" >
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/sale_report_productTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Product Code" />
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content" >
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/sale_report_priceTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Name" />
@@ -56,7 +56,7 @@
         android:layout_height="wrap_content" >
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/sale_report_dateTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Cost" />
