--- a/Pos/res/layout/product_iteminfo.xml
+++ b/Pos/res/layout/product_iteminfo.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content" >
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/sale_report_productTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Product ID" />
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content" >
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/sale_report_priceTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Name" />
@@ -51,7 +51,7 @@
         android:layout_height="wrap_content" >
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/sale_report_productTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Cost" />
