--- a/Pos/res/layout/product_tab.xml
+++ b/Pos/res/layout/product_tab.xml
@@ -12,7 +12,7 @@
         android:orientation="vertical" >
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/sale_report_productTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Name" />
