--- a/Pos/res/layout/sale_tab.xml
+++ b/Pos/res/layout/sale_tab.xml
@@ -37,7 +37,7 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical" >
                 <TextView
-                    android:id="@+id/textView1"
+                    android:id="@+id/sale_report_productTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="0.0"
@@ -66,6 +66,14 @@
                         android:textColor="#FFFFFF"
 						android:background="@drawable/light_grey_button" />
                 </LinearLayout>
+
+                <Button
+                    android:id="@+id/sale_report_button"
+                    style="?android:attr/buttonStyleSmall"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Report" />
+
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
