--- a/Pos/res/layout/sale_dialog_discount.xml
+++ b/Pos/res/layout/sale_dialog_discount.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/sale_dialogtextView"
+        android:id="@+id/sale_dialog_nameTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView" />
@@ -15,13 +15,13 @@
         android:layout_height="wrap_content" >
 
         <TextView
-            android:id="@+id/sale_dialog_nameTextView"
+            android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Quantity" />
 
         <EditText
-            android:id="@+id/saleDialog_editText"
+            android:id="@+id/sale_dialog_quantityEditText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -36,26 +36,38 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Price" />
+
+        <EditText
+            android:id="@+id/sale_dialog_priceEditText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
         <Button
-            android:id="@+id/saleDialog_okButton"
+            android:id="@+id/sale_dialog_okButton"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="OK" />
 
         <Button
-            android:id="@+id/saleDialog_cancelButton"
+            android:id="@+id/sale_dialog_cancelButton"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Cancel" />
-
-        <Button
-            android:id="@+id/saleDialog_editButton"
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Edit" />
 
     </LinearLayout>
 
