--- a/Pos/res/layout/sale_dialog.xml
+++ b/Pos/res/layout/sale_dialog.xml
@@ -55,7 +55,7 @@
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Edit" />
+            android:text="Edit price" />
 
     </LinearLayout>
 
