--- a/Pos/res/layout/product_edit_item.xml
+++ b/Pos/res/layout/product_edit_item.xml
@@ -107,7 +107,7 @@
             android:ems="10" />
 
         <Button
-            android:id="@+id/Button01"
+            android:id="@+id/product_info_scanButton"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="Scan" />
